Removed facebook and Google plus and added mail

--- a/less/new-age.less
+++ b/less/new-age.less
@@ -351,6 +351,14 @@ section.contact {
                     }
                 }
             }
+            &.social-mail {
+                a {
+                    background-color: @brand-mail;
+                    &:hover {
+                        background-color: darken(@brand-mail, 5%);
+                    }
+                }
+            }
             &.social-google-plus {
                 a {
                     background-color: @brand-google-plus;
