--- a/less/variables.less
+++ b/less/variables.less
@@ -2,8 +2,8 @@
 
 // Gray and Brand Colors for use across theme
 
-@theme-primary:    #fdcc52;
-@theme-secondary:  #7b4397;
+@theme-primary:    #222;
+@theme-secondary:  #ff8415;
 @theme-tertiary:   #dc2430;
 
 @gray-base:        #000;
