--- a/less/mixins.less
+++ b/less/mixins.less
@@ -55,17 +55,17 @@
 }
 
 .heading-font {
-	font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
-	font-weight: 200;
-	letter-spacing: 1px;
+	font-family: 'Montserrat', 'Helvetica', 'Arial', 'sans-serif';
+	font-weight: 400;
 }
 
 .body-font {
-	font-family: 'Muli', 'Helvetica', 'Arial', 'sans-serif';
+	font-family: 'Montserrat', 'Helvetica', 'Arial', 'sans-serif';
+	font-weight: 400;
 }
 
 .alt-font {
-	font-family: 'Lato', 'Helvetica', 'Arial', 'sans-serif';
+	font-family: 'Montserrat', 'Helvetica', 'Arial', 'sans-serif';
 	text-transform: uppercase;
 	letter-spacing: 2px;
 }
